[package]
name = "minted-job"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html\
[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
database = { path = "../database" }
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-chrono", "with-json", "postgres-array"] }
cronjob = { path = "../cronjob" }
dotenv = "0.15.0"
anyhow = "1.0.71"
chrono = "0.4.26"

