[package]
name = "pg-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.29.1", features = ["full"] }
dotenv = "0.15.0"
image = "0.24.7"
surf = { version = "2.3.2", features = ["hyper-client"] }
database = { path = "../database" }
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-chrono", "with-json", "postgres-array"] }
futures = "0.3.28"
